# flake8-sarif-formatter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  __init__.py  flake8_sarif_formatter.py  pyproject.toml  release.sh
.github/: dependabot.yml
.github/workflows/: bandit.yml  python_lint.yml
data/: rules.json
flake8_sarif_formatter/: flake8_sarif_formatter.py
tests/: test_sarif_formatter.py
