[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8_sarif_formatter"
version = "0.0.3"
description = "A SARIF formatter for flake8"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "flake8>=5.0.0",
    "requests>=2.0.0",
    "beautifulsoup4>=4.0.0",
]
[project.urls]
"Homepage" = "https://github.com/advanced-security/python-lint-code-scanning-action"
"Bug Tracker" = "https://github.com/advanced-security/python-lint-code-scanning-action/issues"

[project.entry-points."flake8.report"]
sarif = "flake8_sarif_formatter.flake8_sarif_formatter:SarifFormatter"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "*.egg", "build", ".pytype", ".mypy_cache"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
ignore-paths = ["\\.git", "__pycache__", ".*\\.egg", "build", "\\.pytype", "\\.mypy_cache"]

[tool.black] 
line-length = 120
target-version = ['py310']
exclude = "/(\\.direnv|\\.eggs|\\.git|\\.mypy_cache|\\.nox|\\.tox|\\.venv|venv|\\.ipynb_checkpoints|_build|buck-out|build|dist|__pypackages__|\\.pytype)/"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytype]
python_version = "3.10"

[tool.fixit]
root = true
python-version = "3.10"
formatter = "black"
